# stg2c

./: .gitignore  CMakeLists.txt  README.md
examples/simple/: lexer.stg2c  tokens.h
src/: main.c
